--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akti Forum | Community Reimagined</title>
+  <meta name="google-site-verification" content="ilPasotX7WFRlZwEd0RHqiTCcusQCwxwEfO3G2Uuu20" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,15 +30,18 @@
     
     @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     @keyframes slideIn { from { opacity: 0; transform: translateX(-10px); } to { opacity: 1; transform: translateX(0); } }
+    @keyframes pulse-slow { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+    
     .animate-fadeIn { animation: fadeIn 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
     .animate-slideIn { animation: slideIn 0.5s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
+    .animate-pulse-slow { animation: pulse-slow 3s infinite; }
   </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "firebase/": "https://esm.sh/firebase@^12.7.0/",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
@@ -49,6 +53,7 @@
 </head>
 <body class="custom-scrollbar">
   <div id="root"></div>
+  <!-- Removing importmap to allow Vite/Bundler to handle resolution correctly -->
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
