--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Akti Elite | Mature Community Signal</title>
+  <title>SecureH | Secure Community Signal</title>
   <meta name="google-site-verification" content="ilPasotX7WFRlZwEd0RHqiTCcusQCwxwEfO3G2Uuu20" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
