feat: Remove AI features and integrate Adsterra ads
Replaces Gemini AI functionality with static responses for bio generation and support.
Removes the SupportWidget component and updates App.tsx to link directly to Telegram for support.
Adds global Adsterra ad script to index.html and updates AdsterraAd component for banner integration.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+  
+  <!-- Adsterra Global Ad Script -->
+  <script src="https://pl28318894.effectivegatecpm.com/ba/63/5b/ba635be1e4e7cac01e74ad47f426bbbe.js"></script>
+
   <style>
     body { 
       font-family: 'Inter', sans-serif; 
